--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "html-webpack-mountpoint-plugin",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A simple plugin that adds mountpoints to the default template. Intended for use with the html-webpack-plugin.",
   "main": "index.js",
   "author": "adam@atricoware.com",
   "license": "MIT",
   "keywords": [
-    "html-webpack-plugin", "webpack", "appMount"
+    "html-webpack-plugin",
+    "webpack",
+    "appMount"
   ],
   "repository": {
     "type": "git",
